atualização com comentários

--- a/cadastro.html
+++ b/cadastro.html
@@ -16,8 +16,8 @@
   <a href="login.html"></a>
   <div class="container">
     <section class="header">
-      <h2>CADASTRE-SE <br>
-        Para entrar e se desbravar no mundo aquático!</h2>
+      <h2>CADASTRE-SE <br> <!-- Título -->
+        Para entrar e se desbravar no mundo aquático!</h2> <!-- SubTítulo -->
     </section>
 
     <form id="form" class="form">
@@ -26,9 +26,8 @@
         <input
           type="text"
           id="username"
-          placeholder="Digite o nome do usuario..."
-        />
-        <a>Aqui vai a mensagem de erro....</a>
+          placeholder="Digite o nome do usuario..."/> <!-- Texto que fica dentro da caixa de texto -->
+        <a>Aqui vai a mensagem de erro....</a> <!-- Mensagem de erro -->
       </div>
 
       <div class="form-content">
@@ -36,9 +35,8 @@
         <input
           type="email"
           id="email"
-          placeholder="Digite o seu email..."
-        />
-        <a>Aqui vai a mensagem de erro....</a>
+          placeholder="Digite o seu email..."/>  <!-- Texto que fica dentro da caixa de texto -->
+        <a>Aqui vai a mensagem de erro....</a><!-- Mensagem de erro -->
       </div>
 
       <div class="form-content">
@@ -46,9 +44,8 @@
         <input
           type="password"
           id="password"
-          placeholder="Digite sua senha..."
-        />
-        <a>Aqui vai a mensagem de erro....</a>
+          placeholder="Digite sua senha..." />  <!-- Texto que fica dentro da caixa de texto -->
+        <a>Aqui vai a mensagem de erro....</a><!-- Mensagem de erro -->
       </div>
 
       <div class="form-content">
@@ -56,12 +53,11 @@
         <input
           type="password"
           id="password-confirmation"
-          placeholder="Digite sua senha novamente..."
-        />
-        <a>Aqui vai a mensagem de erro....</a>
+          placeholder="Digite sua senha novamente..."/> <!-- Texto que fica dentro da caixa de texto -->
+        <a>Aqui vai a mensagem de erro....</a><!-- Mensagem de erro -->
       </div>
 
-      <button type="submit">Cadastrar</button>
+      <button type="submit">Cadastrar</button> <!-- Botão para cadastrar -->
 
     </form>
 
