--- a/livrodois.html
+++ b/livrodois.html
@@ -11,10 +11,10 @@
 <body>
 
     <div id="principal">
-        <h6 id="topo">INFO NO NADO</h6>
+        <h6 id="topo">INFO NO NADO</h6><!--topo da página-->
         <div id="cabecalho">
             <div id="pularAoConteudo">
-                <img src="./img/nat12.jpeg" width="1000" height="600" alt="">
+                <img src="./img/nat12.jpeg" width="1000" height="600" alt=""><!--imagem no topo da página-->
             </div>
         </div id=menuprinc>
 <br>
@@ -30,7 +30,7 @@
 <br>
 
 
-        <div id="menuNav">
+        <div id="menuNav"><!--menu de navegação-->
             <ul>
                 <strong>
                     <li><a href="Início.html">INÍCIO</a></li>
@@ -40,13 +40,13 @@
             </ul>
         </div>
 
-        <div id="menu">
-            <h3>PRINCIPAIS NADOS</h3>
+        <div id="menu"><!--menu-->
+            <h3>PRINCIPAIS NADOS</h3><!--título do menu-->
             <ul>
-                <li><a href="livroum.html">Nado livre (CRAWL)</a></li>
-                <li><a href="livrodois.html">Nado de costas</a></li>
-                <li><a href="livrotres.html">Nado peito</a></li>
-                <li><a href="livroquatro.html">Nado borboleta</a></li>
+                <li><a href="livroum.html">Nado livre (CRAWL)</a></li><!--opção 1-->
+                <li><a href="livrodois.html">Nado de costas</a></li><!--opção 2-->
+                <li><a href="livrotres.html">Nado peito</a></li><!--opção 3-->
+                <li><a href="livroquatro.html">Nado borboleta</a></li><!--opção 4-->
 
             </ul>
 
@@ -56,7 +56,7 @@
         <div id="conteudo">
             <div class="divblog">
                 <h2>
-                    <a href="#"><strong>NADO DE COSTAS</strong></a>
+                    <a href="#"><strong>NADO DE COSTAS</strong></a><!--título-->
                 </h2>
 
                 <p>
@@ -64,6 +64,7 @@
                 <p>
                 
                 <p>
+                    <!--conteúdo-->
                     No nado de costas, o nadador permanece durante todo o percurso
                      com o abdome voltado para fora da água.
                      <BR>
@@ -87,7 +88,7 @@
             </div>
         </div>
 
-        <div id="rodape">© 2023 INFO NO NADO </div>
+        <div id="rodape">© 2023 INFO NO NADO </div><!--rodapé-->
 
 
 
