--- a/livroquatro.html
+++ b/livroquatro.html
@@ -11,10 +11,10 @@
 <body>
 
     <div id="principal">
-        <h6 id="topo">INFO NO NADO</h6>
+        <h6 id="topo">INFO NO NADO</h6><!--topo da página-->
         <div id="cabecalho">
             <div id="pularAoConteudo">
-                <img src="./img/nat14.jpg" width="1000" height="600" alt="">
+                <img src="./img/nat14.jpg" width="1000" height="600" alt=""><!--imagem no topo da página-->
             </div>
         </div id=menuprinc>
 <br>
@@ -29,7 +29,7 @@
 <br>
 <br>
 
-        <div id="menuNav">
+        <div id="menuNav"><!--menu de navegação-->
             <ul>
                 <strong>
                     <li><a href="Início.html">INÍCIO</a></li>
@@ -39,13 +39,13 @@
             </ul>
         </div>
 
-         <div id="menu">
-            <h3>PRINCIPAIS NADOS</h3>
+         <div id="menu"><!--menu-->
+            <h3>PRINCIPAIS NADOS</h3><!--título do menu-->
             <ul>
-                <li><a href="livroum.html">Nado livre (CRAWL)</a></li>
-                <li><a href="livrodois.html">Nado de costas</a></li>
-                <li><a href="livrotres.html">Nado peito</a></li>
-                <li><a href="livroquatro.html">Nado borboleta</a></li>
+                <li><a href="livroum.html">Nado livre (CRAWL)</a></li><!--opção 1-->
+                <li><a href="livrodois.html">Nado de costas</a></li><!--opção 2-->
+                <li><a href="livrotres.html">Nado peito</a></li><!--opção 3-->
+                <li><a href="livroquatro.html">Nado borboleta</a></li><!--opção 4-->
 
             </ul>
 
@@ -55,9 +55,10 @@
         <div id="conteudo">
             <div class="divblog">
                 <h2>
-                    <a><strong>NADO BORBOLETA</strong></a>
+                    <a><strong>NADO BORBOLETA</strong></a><!--título-->
                 </h2>
                 <p>
+                    <!--conteúdo-->
                     O nado borboleta é o mais difícil de ser realizado, por ser 
                     o mais pesado. Exige força para empurrar a água e, ao mesmo
                      tempo, flexibilidade para enfrentar a resistência dela. 
@@ -82,7 +83,7 @@
             </div>
         </div>
 
-        <div id="rodape">© 2023 INFO NO NADO </div>
+        <div id="rodape">© 2023 INFO NO NADO </div><!--rodapé-->
 
 
 
