--- a/login.html
+++ b/login.html
@@ -13,25 +13,25 @@
 <body>
    <div class="main-login">
  <div class="left-login">
-   <center> <h1>BEM-VINDO AO INFO NO NADO!<br>
+   <center> <h1>BEM-VINDO AO INFO NO NADO!<br><!--título-->
         <br>
         Faça seu login, saia da informática por instantes e mergulhe de vez 
-    no mundo aquático! </h1>
+    no mundo aquático! </h1><!--subtítulo-->
         </center>
-  <img src="./img/giflogin.gif"lass="left-login-image"alt="Piscina Olímpica">
+  <img src="./img/giflogin.gif"lass="left-login-image"alt="Piscina Olímpica"><!--gif de animação-->
  </div>
  <div class="rigth-login">
     <div class="card-login">
-        <h1>LOGIN</h1>
-        <div class="textfield">
+        <h1>LOGIN</h1><!--título da caixa de login-->
+        <div class="textfield"><!--caixa para colocar o usuário-->
             <label for="usuario">Usuário:</label>
             <input type="text" name="usuario" placeholder="Usuário">
         </div>
-        <div class="textfield">
+        <div class="textfield"><!--caixa para colocar a senha-->
             <label for="usuario">Senha:</label>
             <input type="password" name="Senha" placeholder="Senha">
         </div>
-            <a class="buton"  href="http://127.0.0.1:5500/Início.html"><button>ENTRAR</button></a>
+            <a class="buton"  href="http://127.0.0.1:5500/Início.html"><button>ENTRAR</button></a><!--botão entrar-->
         </div>
     </div>
 </div>html
