--- a/Classificações.html
+++ b/Classificações.html
@@ -11,10 +11,10 @@
 <body>
 
     <div id="principal">
-        <h6 id="topo">INFO NO NADO</h6>
+        <h6 id="topo">INFO NO NADO</h6> <!--Topo da página-->
         <div id="cabecalho">
             <div id="pularAoConteudo">
-                <img src="./img/nat7.jpg" width="1000" height="600" alt="">
+                <img src="./img/nat7.jpg" width="1000" height="600" alt=""> <!--Imagem no topo da página-->
             </div>
         </div id=menuprinc>
 <br>
@@ -28,7 +28,7 @@
 <br>
 <br>
 <br>
-        <div id="menuNav">
+        <div id="menuNav"> <!--Barra de navegação-->
             <ul>
                 <strong>
                     <li><a href="Início.html">INÍCIO</a></li>
@@ -39,12 +39,12 @@
         </div>
 
         <div id="menu">
-            <h3>PRINCIPAIS NADOS</h3>
+            <h3>PRINCIPAIS NADOS</h3> <!-- Título do menu -->
             <ul>
-                <li><a href="livroum.html">Nado livre (CRAWL)</a></li>
-                <li><a href="livrodois.html">Nado de costas</a></li>
-                <li><a href="livrotres.html">Nado peito</a></li>
-                <li><a href="livrotres.html">Nado borboleta</a></li>
+                <li><a href="livroum.html">Nado livre (CRAWL)</a></li> <!--opção 1-->
+                <li><a href="livrodois.html">Nado de costas</a></li><!--opção 2-->
+                <li><a href="livrotres.html">Nado peito</a></li><!--opção 3-->
+                <li><a href="livrotres.html">Nado borboleta</a></li><!--opção 4-->
 
             </ul>
 
@@ -54,7 +54,7 @@
         <div id="conteudo">
             <div class="divblog">
                 <h2>
-                    <a href="#"><strong>ATLETAS RENOMADOS DA NATAÇÃO BRASILEIRA</strong></a>
+                    <a href="#"><strong>ATLETAS RENOMADOS DA NATAÇÃO BRASILEIRA</strong></a> <!-- título -->
                 </h2>
 
                 <p>
@@ -63,9 +63,9 @@
                       
 
                     <h2>Ranking dos melhores atletas nos dois campeonatos nacionais do ano : Troféu Brasil e Troféu Finkel</h2>
-                   <br>
+                   <br> <!-- SubTítulo -->
                    
-                    <table>
+                    <table> <!-- Tabela dos melhores atletas -->
                         <tr>
                             <th>Posição</th>
                             <th>Nome</th>
@@ -131,7 +131,7 @@
             </div>
         </div>
 
-        <div id="rodape">© 2023 INFO NO NADO </div>
+        <div id="rodape">© 2023 INFO NO NADO </div> <!-- Rodapé -->
 
 
 
