--- a/Início.html
+++ b/Início.html
@@ -15,14 +15,14 @@
 <body>
 
 	<div id="principal">
-		<h6 id="topo"> INFO NO NADO </h6>
+		<h6 id="topo"> INFO NO NADO </h6> <!--Topo da página-->
 		<div id="cabecalho">
 			<div id="pularAoConteudo">
-				<img src="./img/CAPA 2.jpg" width="1000" height="400" alt="">
+				<img src="./img/CAPA 2.jpg" width="1000" height="400" alt=""> <!--Foto no topo da pagina-->
 			</div>
 		</div id=menuprinc>
 
-		<div id="menuNav">
+		<div id="menuNav"><!--menu de navegação-->
 			<ul>
 				<strong>
 					<li><a href="Início.html">INÍCIO</a></li>
@@ -33,12 +33,12 @@
 		</div>
 
 		<div id="menu">
-			<h3>PRINCIPAIS NADOS</h3>
+			<h3>PRINCIPAIS NADOS</h3> <!--título do menu-->
             <ul>
-                <li><a href="livroum.html">Nado livre (CRAWL)</a></li>
-                <li><a href="livrodois.html">Nado de costas</a></li>
-                <li><a href="livrotres.html">Nado peito</a></li>
-                <li><a href="livroquatro.html">Nado borboleta</a></li>
+                <li><a href="livroum.html">Nado livre (CRAWL)</a></li> <!--opção 1-->
+                <li><a href="livrodois.html">Nado de costas</a></li><!--opção 2-->
+                <li><a href="livrotres.html">Nado peito</a></li><!--opção 3-->
+                <li><a href="livroquatro.html">Nado borboleta</a></li><!--opção 4-->
 
             </ul>
 
@@ -49,12 +49,13 @@
 		<div id="conteudo">
 			<div class="divblog">
 				<h2>
-					<a href="#"><strong>NATAÇÃO - História e curiosidades</strong></a>
+					<a href="#"><strong>NATAÇÃO - História e curiosidades</strong></a> <!--título-->
 				</h2>
 
 				
 				<p>
-					<strong>História da Natação: 
+					<strong>História da Natação: <!--subtítulo-->
+					<!--conteúdo-->
 					</strong> A natação é praticada desde muitos anos antes de Cristo, isso é revelado por pinturas
 					 rupestres e relatos que remontam uma antiga relação dos humanos com a atividade. A capacidade 
 					 de nadar possibilitou avanços significativos em questões relacionadas à sobrevivência e ao 
@@ -71,7 +72,7 @@
 					<br>
 					<center>
 						<div>
-							<img src="./img/natacao3.jpg" width="700" height="500" alt="">
+							<img src="./img/natacao3.jpg" width="700" height="500" alt=""><!--imagem-->
 						</div>
 					</img></center>
 					<br>
@@ -83,7 +84,7 @@
 			</div>
 		</div>
 
-		<div id="rodape">© 2023 INFO NO NADO </div>
+		<div id="rodape">© 2023 INFO NO NADO </div><!--rodapé-->
 
 
 
