--- a/livroum.html
+++ b/livroum.html
@@ -11,10 +11,10 @@
 <body>
 
     <div id="principal">
-        <h6 id="topo">INFO NO NADO</h6>
+        <h6 id="topo">INFO NO NADO</h6><!--topo da página-->
         <div id="cabecalho">
             <div id="pularAoConteudo">
-                <img src="./img/nat10.webp" width="1000" height="500" alt="">
+                <img src="./img/nat10.webp" width="1000" height="500" alt=""><!--imagem no topo da página-->
             </div>
         </div id=menuprinc>
 <br>
@@ -23,7 +23,7 @@
 <br>
 <br>
 
-        <div id="menuNav">
+        <div id="menuNav"><!--menu de navegação-->
             <ul>
                 <strong>
                     <li><a href="Início.html">INÍCIO</a></li>
@@ -33,13 +33,13 @@
             </ul>
         </div>
 
-        <div id="menu">
-            <h3>PRINCIPAIS NADOS</h3>
+        <div id="menu"><!--menu-->
+            <h3>PRINCIPAIS NADOS</h3><!--título do menu-->
             <ul>
-                <li><a href="livroum.html">Nado livre (CRAWL)</a></li>
-                <li><a href="livrodois.html">Nado de costas</a></li>
-                <li><a href="livrotres.html">Nado peito</a></li>
-                <li><a href="livroquatro.html">Nado borboleta</a></li>
+                <li><a href="livroum.html">Nado livre (CRAWL)</a></li><!--opção 1-->
+                <li><a href="livrodois.html">Nado de costas</a></li><!--opção 2-->
+                <li><a href="livrotres.html">Nado peito</a></li><!--opção 3-->
+                <li><a href="livroquatro.html">Nado borboleta</a></li><!--opção 4-->
 
             </ul>
 
@@ -49,9 +49,9 @@
         <div id="conteudo">
             <div class="divblog">
                 <h2>
-                    <a href="#"><strong>NADO LIVRE (CRAWL)</strong></a>
+                    <a href="#"><strong>NADO LIVRE (CRAWL)</strong></a><!--título-->
                 </h2>
-
+                <!--Conteúdo-->
                 <p>Além de ser o mais simples, também é o mais praticado e rápido.
                      Nele, a pessoa se posiciona com a parte frontal do corpo 
                      voltada para o fundo da piscina. 
@@ -77,7 +77,7 @@
             </div>
         </div>
 
-        <div id="rodape">© 2023 MF VAQUEJADA </div>
+        <div id="rodape">© 2023 INFO NO NADO </div> <!--rodapé-->
 
 
 
