--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
             <a class="buton"  href="http://127.0.0.1:5500/Início.html"><button>ENTRAR</button></a><!--botão entrar-->
         </div>
     </div>
-</div>html
+</div>
  </div>
 </body>
 </html>
